--- a/src/Resources/Views/loginScreen.fxml
+++ b/src/Resources/Views/loginScreen.fxml
@@ -10,23 +10,23 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="665.0" prefWidth="666.0" style="-fx-background-color: FFAA00;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="loginController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="665.0" prefWidth="666.0" style="-fx-background-color: FFAA00;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controllers.loginController">
    <children>
-      <Separator layoutX="304.0" layoutY="37.0" orientation="VERTICAL" prefHeight="598.0" prefWidth="83.0">
+      <Separator layoutX="301.0" layoutY="156.0" orientation="VERTICAL" prefHeight="353.0" prefWidth="83.0">
          <effect>
             <Glow level="1.0" />
          </effect></Separator>
-      <Label layoutX="82.0" layoutY="242.0" text="MARMOLERIA" textFill="#ffffffce">
+      <Label alignment="CENTER" layoutX="45.0" layoutY="230.0" prefHeight="82.0" prefWidth="230.0" text="Marmoleria" textFill="#ffffffce">
          <font>
-            <Font name="System Bold" size="36.0" />
+            <Font name="Raleway Bold" size="39.0" />
          </font>
          <effect>
-            <Glow level="0.21" />
+            <Glow level="0.73" />
          </effect>
       </Label>
-      <Label layoutX="123.0" layoutY="292.0" text="VERONA">
+      <Label layoutX="67.0" layoutY="303.0" text="VERONA">
          <font>
-            <Font name="System Bold" size="36.0" />
+            <Font name="System Bold" size="48.0" />
          </font>
          <effect>
             <Glow level="0.25" />
@@ -36,11 +36,11 @@
       <Label layoutX="374.0" layoutY="290.0" text="Contraseña:" />
       <TextField fx:id="loginField" layoutX="454.0" layoutY="238.0" />
       <PasswordField fx:id="passwordField" layoutX="454.0" layoutY="286.0" />
-      <Button fx:id="btnLogin" layoutX="480.0" layoutY="413.0" mnemonicParsing="false" onAction="#btnLoginClick" text="Iniciar Sesion">
+      <Button fx:id="btnLogin" layoutX="470.0" layoutY="375.0" mnemonicParsing="false" onAction="#btnLoginClick" text="Iniciar Sesion">
          <effect>
             <InnerShadow height="0.0" radius="0.0" width="0.0" />
          </effect></Button>
-      <Label alignment="TOP_CENTER" contentDisplay="CENTER" layoutX="445.0" layoutY="90.0" prefHeight="36.0" prefWidth="171.0" text="Inicio de Sesion" textAlignment="CENTER">
+      <Label alignment="TOP_CENTER" contentDisplay="CENTER" layoutX="429.0" layoutY="116.0" prefHeight="36.0" prefWidth="171.0" text="Inicio de Sesion" textAlignment="CENTER">
          <font>
             <Font name="System Bold" size="25.0" />
          </font>
