--- a/src/Resources/Views/dashboard.fxml
+++ b/src/Resources/Views/dashboard.fxml
@@ -1,19 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.chart.BarChart?>
-<?import javafx.scene.chart.CategoryAxis?>
-<?import javafx.scene.chart.NumberAxis?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ButtonBar?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.Separator?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="472.0" prefWidth="867.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controllers.Seller.dashboardSellerController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="472.0" prefWidth="861.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controllers.Seller.dashboardSellerController">
    <children>
-      <Label layoutX="14.0" layoutY="65.0" text="Fecha:" />
-      <Label fx:id="fechaLabel" layoutX="65.0" layoutY="66.0" />
-      
-      <Label id="userName" layoutX="542.0" layoutY="19.0" />
+      <Label layoutX="13.0" layoutY="121.0" text="Fecha:" />
+      <Label fx:id="fechaLabel" layoutX="68.0" layoutY="75.0" prefHeight="17.0" prefWidth="73.0" />
       <ButtonBar layoutX="-3.0" layoutY="-1.0" prefHeight="49.0" prefWidth="857.0">
         <buttons>
             <Button fx:id="btnBachas" mnemonicParsing="false" onAction="#btnBachasClicked" style="-fx-background-color: ffaa00;" text="Bachas" />
@@ -23,5 +21,28 @@
           <Button fx:id="btnCerrarSesion" mnemonicParsing="false" onAction="#btnCerrarSesionClicked" prefHeight="26.0" style="-fx-background-color: Grey;" text="Cerrar Sesion" textFill="WHITE" />
         </buttons>
       </ButtonBar>
+      <Label layoutX="11.0" layoutY="75.0" text="Gracias" />
+      <Label fx:id="nombreEmpleado" layoutX="65.0" layoutY="75.0" prefHeight="17.0" prefWidth="65.0" />
+      <Label layoutX="173.0" layoutY="75.0" text="Por trabajar con Nosotros" />
+      <Label layoutX="16.0" layoutY="165.0" text="Ultima Cotizacion del dolar BNA:" />
+      <Label layoutX="13.0" layoutY="195.0" text="Ultima Cotizacion del dolar BLUE:" />
+      <Label fx:id="cotizacionDolarBNA" layoutX="195.0" layoutY="165.0" prefHeight="17.0" prefWidth="122.0" />
+      <Label fx:id="cotizacionDolarBlue" layoutX="205.0" layoutY="186.0" />
+      <Button fx:id="BtnCotizaciones" layoutX="367.0" layoutY="182.0" mnemonicParsing="false" onAction="#BtnCotizacionesClicked" style="-fx-background-color: FFAA00;" text="Actualizar Cotizacion" />
+      <Separator layoutX="4.0" layoutY="97.0" prefHeight="10.0" prefWidth="857.0" />
+      <Separator layoutY="155.0" prefHeight="10.0" prefWidth="857.0" />
+      <Separator layoutX="4.0" layoutY="241.0" prefHeight="0.0" prefWidth="857.0" />
+      <TableView fx:id="tablaVentasResumen" layoutX="1.0" layoutY="241.0" prefHeight="230.0" prefWidth="861.0">
+        <columns>
+          <TableColumn fx:id="colID" prefWidth="45.0" text="ID" />
+          <TableColumn fx:id="colNombre" prefWidth="104.0" text="Nombre" />
+            <TableColumn fx:id="colDetalle" prefWidth="108.0" text="Detalle" />
+            <TableColumn fx:id="colColor" prefWidth="119.0" text="Color" />
+            <TableColumn fx:id="colFechaIngreso" prefWidth="113.0" text="Fecha de Ingerso" />
+            <TableColumn fx:id="colFechaTerminacion" prefWidth="126.0" text="Fecha de Terminacion" />
+            <TableColumn fx:id="colTelefono" prefWidth="114.0" text="Telefono" />
+            <TableColumn fx:id="colEstado" prefWidth="131.0" text="Estado" />
+        </columns>
+      </TableView>
    </children>
 </AnchorPane>
