--- a/bin/Resources/Views/cotizaciones.fxml
+++ b/bin/Resources/Views/cotizaciones.fxml
@@ -8,7 +8,6 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="541.0" prefWidth="705.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controllers.Common.cotizacionesController">
    <children>
       <Button fx:id="btnVolver" layoutX="327.0" layoutY="490.0" mnemonicParsing="false" onAction="#btnVolverClicked" style="-fx-background-color: FFAA00;" text="Volver" />
@@ -26,22 +25,22 @@
       </Label>
       <Separator layoutX="14.0" layoutY="330.0" prefHeight="0.0" prefWidth="682.0" />
       <Label layoutX="260.0" layoutY="238.0" text="Dolar CCL Cotizaciones" />
-      <TableView layoutX="49.0" layoutY="391.0" prefHeight="87.0" prefWidth="387.0">
+      <TableView fx:id="tablaDolarCCL" layoutX="49.0" layoutY="391.0" prefHeight="87.0" prefWidth="387.0">
         <columns>
-          <TableColumn prefWidth="197.0" text="Fecha" />
-            <TableColumn prefWidth="189.0" text="Cambio en ARS" />
+          <TableColumn fx:id="columnaFechaCCL" prefWidth="197.0" text="Fecha" />
+            <TableColumn fx:id="columnaImporteCCLARS" prefWidth="189.0" text="Cambio en ARS" />
         </columns>
       </TableView>
-      <TableView layoutX="49.0" layoutY="220.0" prefHeight="96.0" prefWidth="354.0">
+      <TableView fx:id="tablaDolarBlue" layoutX="49.0" layoutY="220.0" prefHeight="96.0" prefWidth="354.0">
         <columns>
-          <TableColumn prefWidth="181.0" text="Fecha" />
-          <TableColumn prefWidth="172.0" text="Cambio en ARS" />
+          <TableColumn fx:id="columnaFechaDB" prefWidth="181.0" text="Fecha" />
+          <TableColumn fx:id="columnaImporteDBARS" prefWidth="172.0" text="Cambio en ARS" />
         </columns>
       </TableView>
-      <TableView layoutX="49.0" layoutY="71.0" prefHeight="96.0" prefWidth="322.0">
+      <TableView fx:id="tablaDolarOficial" layoutX="49.0" layoutY="71.0" prefHeight="96.0" prefWidth="322.0">
         <columns>
-          <TableColumn prefWidth="171.0" text="Fecha" />
-          <TableColumn prefWidth="150.0" text="Cambio en ARS" />
+          <TableColumn fx:id="fechaColumnaDO" prefWidth="171.0" text="Fecha" />
+          <TableColumn fx:id="columnaImporteDOARS" prefWidth="150.0" text="Cambio en ARS" />
         </columns>
       </TableView>
       <Button fx:id="btnNCOficial" layoutX="394.0" layoutY="106.0" mnemonicParsing="false" onAction="#btnNCOficialClicked" text="Ingresar Nueva Cotizacion Oficial" />
