--- a/bin/Resources/Views/bachas.fxml
+++ b/bin/Resources/Views/bachas.fxml
@@ -7,11 +7,10 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="508.0" prefWidth="733.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controllers.Common.bachasController">
    <children>
       <TableView fx:id="tablaBachasStock" layoutX="48.0" layoutY="87.0" prefHeight="234.0" prefWidth="638.0" />
-      <Button fx:id="btnIngresarBachas" layoutX="315.0" layoutY="348.0" mnemonicParsing="false" onAction="#btnIngresarBachasClicked" style="-fx-background-color: FFAA00;" text="Ingresar Bachas" />
+      <Button fx:id="btnIngresarBachas" layoutX="152.0" layoutY="348.0" mnemonicParsing="false" onAction="#btnIngresarBachasClicked" style="-fx-background-color: FFAA00;" text="Ingresar Bachas" />
       <Button fx:id="btnVolver" layoutX="340.0" layoutY="452.0" mnemonicParsing="false" onAction="#btnVolverClicked" style="-fx-background-color: FFAA00;" text="Volver" />
       <Label layoutX="248.0" layoutY="28.0" prefHeight="39.0" prefWidth="236.0" text="Bachas en Stock">
          <font>
@@ -21,5 +20,6 @@
             <Glow level="0.31" />
          </effect>
       </Label>
+      <Button fx:id="BtnActualizarCantidad" layoutX="467.0" layoutY="348.0" mnemonicParsing="false" onAction="#btnActualizarCantidadClicked" style="-fx-background-color: FFAA00;" text="Actualizar Cantidad" />
    </children>
 </AnchorPane>
