--- a/bin/Resources/Views/buscarVentas.fxml
+++ b/bin/Resources/Views/buscarVentas.fxml
@@ -8,16 +8,21 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="617.0" prefWidth="688.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controllers.Common.buscarVentasController">
    <children>
       <Label layoutX="256.0" layoutY="14.0" text="BUSCAR VENTA">
          <font>
-            <Font name="System Bold" size="26.0" />
+            <Font name="Arial Bold" size="26.0" />
          </font>
       </Label>
-      <Label layoutX="16.0" layoutY="57.0" text="Ingrese ID de Cliente:" />
-      <Label layoutX="389.0" layoutY="57.0" text="Nombre de Cliente:" />
+      <Label layoutX="4.0" layoutY="58.0" text="Ingrese ID de Cliente:">
+         <font>
+            <Font name="Arial Bold" size="13.0" />
+         </font></Label>
+      <Label layoutX="370.0" layoutY="58.0" text="Nombre de Cliente:">
+         <font>
+            <Font name="Arial Bold" size="13.0" />
+         </font></Label>
       <TextField fx:id="idClienteTextField" layoutX="144.0" layoutY="52.0" prefHeight="26.0" prefWidth="105.0" />
       <TextField fx:id="nombreClienteTextField" layoutX="498.0" layoutY="52.0" />
       <Button fx:id="btnBuscar" layoutX="321.0" layoutY="78.0" mnemonicParsing="false" onAction="#btnBuscarClicked" style="-fx-background-color: FFAA00;" text="Buscar" />
