Date format enhancements, error handling, and data presentation in tables
Improved date formatting on the seller's dashboard and enhanced the 'searchSales' functionality. Now, if certain data is null, labels won't be displayed for improved aesthetics. Next steps include refining payment handling and updating the sales status.

--- a/bin/Resources/Views/dashboard.fxml
+++ b/bin/Resources/Views/dashboard.fxml
@@ -22,6 +22,7 @@
               <items>
                 <MenuItem fx:id="btnVentas" mnemonicParsing="false" onAction="#btnVentasClicked" text="Crear Venta" />
                 <MenuItem fx:id="btnVentasBuscar" mnemonicParsing="false" onAction="#btnVentasBuscarClicked" text="Buscar Venta" />
+                <MenuItem fx:id="btnVentasModificarEstado" mnemonicParsing="false" onAction="#btnVentasModificarEstadoClicked" text="Modificar Estado de Venta" />
               </items>
             </MenuButton>
             <Button fx:id="btnCaja" contentDisplay="CENTER" mnemonicParsing="false" onAction="#btnCajaClicked" style="-fx-background-color: FFAA00;" text="Caja" />
