Implemented assignment of blueprints to sales, viewing blueprints table, and image display functionality. Checks if the image is loaded or not.

--- a/bin/Resources/Views/verPlanos.fxml
+++ b/bin/Resources/Views/verPlanos.fxml
@@ -22,7 +22,8 @@
                 <TableColumn text="Codigo de Plano" fx:id="colCodigoPlano" />
                 <TableColumn text="Material" fx:id="colMaterial" />
                 <TableColumn text="Color" fx:id="colColor" />
-                
+                <TableColumn text="Estado" fx:id="colEstado" />
+                <TableColumn text="Imagenes" fx:id="colImagen" />
             </columns>
         </TableView>
     </children>
