--- a/src/main/java/com/verona/view/cotizaciones.fxml
+++ b/src/main/java/com/verona/view/cotizaciones.fxml
@@ -3,19 +3,42 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableView?>
+<?import javafx.scene.effect.DropShadow?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.paint.Color?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="425.0" prefWidth="554.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.verona.controller.common.CotizacionesController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="425.0" prefWidth="554.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.verona.controller.common.CotizacionesController">
    <children>
-      <Button fx:id="btnVolver" layoutX="253.0" layoutY="376.0" mnemonicParsing="false" onAction="#btnVolverClicked" style="-fx-background-color: FFAA00;" text="Volver" />
+      <Button fx:id="btnVolver" layoutX="253.0" layoutY="376.0" mnemonicParsing="false" onAction="#btnVolverClicked" style="-fx-background-color: FFAA00;" text="Volver">
+         <effect>
+            <DropShadow>
+               <color>
+                  <Color opacity="0.6000000238418579" />
+               </color>
+            </DropShadow>
+         </effect></Button>
       <Label fx:id="fecha" layoutX="311.0" layoutY="14.0" prefHeight="17.0" prefWidth="83.0" />
-      <Label layoutX="214.0" layoutY="47.0" text="Dolar Blue Cotizaciones">
+      <Label layoutX="163.0" layoutY="20.0" text="Dolar Blue Cotizaciones">
          <font>
-            <Font name="System Bold" size="13.0" />
+            <Font name="Arial Bold" size="20.0" />
          </font>
       </Label>
-      <TableView fx:id="tablaDolarBlue" layoutX="59.0" layoutY="83.0" prefHeight="200.0" prefWidth="438.0" />
-      <Button fx:id="btnNCB" layoutX="187.0" layoutY="308.0" mnemonicParsing="false" onAction="#btnNCBClicked" text="Ingrear Nueva Cotizacion Blue" />
+      <TableView fx:id="tablaDolarBlue" layoutX="59.0" layoutY="83.0" prefHeight="200.0" prefWidth="438.0">
+         <effect>
+            <DropShadow>
+               <color>
+                  <Color opacity="0.5" />
+               </color>
+            </DropShadow>
+         </effect></TableView>
+      <Button fx:id="btnNCB" layoutX="187.0" layoutY="308.0" mnemonicParsing="false" onAction="#btnNCBClicked" style="-fx-background-color: Black;" text="Ingrear Nueva Cotizacion Blue" textFill="WHITE">
+         <effect>
+            <DropShadow>
+               <color>
+                  <Color opacity="0.6000000238418579" />
+               </color>
+            </DropShadow>
+         </effect></Button>
    </children>
 </AnchorPane>
