--- a/src/main/java/com/verona/view/verBalances.fxml
+++ b/src/main/java/com/verona/view/verBalances.fxml
@@ -8,8 +8,7 @@
 <?import javafx.scene.paint.Color?>
 <?import javafx.scene.text.Font?>
 
-
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.verona.controller.manager.VerBalancesController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.verona.controller.manager.VerBalancesController">
    <children>
       <Label layoutX="246.0" layoutY="14.0" text="Balance">
          <font>
@@ -32,22 +31,22 @@
             </DropShadow>
          </effect>
       </Button>
-      <Label layoutX="192.0" layoutY="69.0" text="Señas:">
+      <Label layoutX="129.0" layoutY="70.0" text="Señas en Efectivo:">
          <font>
             <Font name="Arial Bold" size="13.0" />
          </font>
       </Label>
-      <Label layoutX="75.0" layoutY="101.0" prefHeight="17.0" prefWidth="178.0" text="Dinero en Efectivo en ARS:">
+      <Label layoutX="140.0" layoutY="101.0" prefHeight="17.0" prefWidth="116.0" text="Señas en Banco:">
          <font>
             <Font name="Arial Bold" size="13.0" />
          </font>
       </Label>
-      <Label layoutX="83.0" layoutY="131.0" text="Dinero en Caja de Ahorro:">
+      <Label layoutX="151.0" layoutY="132.0" text="Caja en Banco:">
          <font>
             <Font name="Arial Bold" size="13.0" />
          </font>
       </Label>
-      <Label layoutX="164.0" layoutY="165.0" text="Dinero Total:">
+      <Label layoutX="146.0" layoutY="166.0" text="Caja en Efectivo:">
          <font>
             <Font name="Arial Bold" size="13.0" />
          </font>
@@ -55,8 +54,8 @@
       <Separator layoutY="85.0" prefHeight="16.0" prefWidth="600.0" />
       <Separator layoutX="-1.0" layoutY="122.0" prefHeight="0.0" prefWidth="600.0" />
       <Separator layoutX="4.0" layoutY="153.0" prefHeight="3.0" prefWidth="600.0" />
-      <Separator layoutX="3.0" layoutY="199.0" prefHeight="3.0" prefWidth="594.0" />
-      <Button fx:id="btnVerIngresosDia" layoutX="46.0" layoutY="252.0" mnemonicParsing="false" onAction="#btnVerIngresosDiaClicked" style="-fx-background-color: Black;" text="Ver Ingresos del Dia" textFill="WHITE">
+      <Separator layoutX="3.0" layoutY="192.0" prefHeight="16.0" prefWidth="594.0" />
+      <Button fx:id="btnArqueosPasados" layoutX="166.0" layoutY="286.0" mnemonicParsing="false" onAction="#btnArqueosPasadosClicked" style="-fx-background-color: Black;" text="Arqueos Pasados" textFill="WHITE">
          <effect>
             <DropShadow>
                <color>
@@ -65,12 +64,7 @@
             </DropShadow>
          </effect>
       </Button>
-      <Button fx:id="btnSalidasDia" layoutX="433.0" layoutY="252.0" mnemonicParsing="false" onAction="#btnSalidasDiaClicked" style="-fx-background-color: Black;" text="Ver Salidas del Dia" textFill="WHITE">
-         <effect>
-            <DropShadow blurType="ONE_PASS_BOX" />
-         </effect>
-      </Button>
-      <Button fx:id="btnArqueo" layoutX="256.0" layoutY="252.0" mnemonicParsing="false" onAction="#btnArqueoClicked" style="-fx-background-color: Black;" text="Arqueo del Dia" textFill="WHITE">
+      <Button fx:id="btnArqueo" layoutX="331.0" layoutY="286.0" mnemonicParsing="false" onAction="#btnArqueoClicked" style="-fx-background-color: Black;" text="Arqueo del Dia" textFill="WHITE">
          <effect>
             <DropShadow>
                <color>
@@ -79,9 +73,21 @@
             </DropShadow>
          </effect>
       </Button>
-      <Label fx:id="seniasLabel" layoutX="253.0" layoutY="69.0" prefHeight="17.0" prefWidth="188.0" />
-      <Label fx:id="dineroEfectivoLabel" layoutX="253.0" layoutY="101.0" prefHeight="17.0" prefWidth="188.0" />
-      <Label fx:id="dineroCajaAhorroLabel" layoutX="253.0" layoutY="131.0" prefHeight="17.0" prefWidth="188.0" />
-      <Label fx:id="dineroTotalLabel" layoutX="256.0" layoutY="165.0" prefHeight="17.0" prefWidth="188.0" />
+      <Label fx:id="SeñasEfectivoLabelToComplete" layoutX="253.0" layoutY="70.0" prefHeight="17.0" prefWidth="188.0" />
+      <Label fx:id="señasBancoLabelToComplete" layoutX="260.0" layoutY="101.0" prefHeight="17.0" prefWidth="188.0" />
+      <Label fx:id="cajaBancoLabelToComplete" layoutX="253.0" layoutY="131.0" prefHeight="17.0" prefWidth="188.0" />
+      <Label fx:id="cajaEfectivoLabelToComplete" layoutX="256.0" layoutY="165.0" prefHeight="17.0" prefWidth="188.0" />
+      <Label layoutX="156.0" layoutY="208.0" text="Total de Señas:">
+         <font>
+            <Font name="Arial Bold" size="13.0" />
+         </font>
+      </Label>
+      <Label layoutX="78.0" layoutY="237.0" text="Total de Caja de la Sucursal:">
+         <font>
+            <Font name="Arial Bold" size="13.0" />
+         </font>
+      </Label>
+      <Label fx:id="totalSeñasToComplete" layoutX="262.0" layoutY="208.0" prefHeight="17.0" prefWidth="176.0" />
+      <Label fx:id="totalCajaToComplete" layoutX="259.0" layoutY="237.0" prefHeight="17.0" prefWidth="176.0" />
    </children>
 </AnchorPane>
